--- a/ChatProjectClient/src/fxml/index.fxml
+++ b/ChatProjectClient/src/fxml/index.fxml
@@ -5,9 +5,9 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0" fx:controller="IndexController"
-	xmlns:fx="http://javafx.com/fxml/1"
-	xmlns="http://javafx.com/javafx/17">
+<GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0"
+	xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1" fx:controller="IndexController">
 	<columnConstraints>
 		<ColumnConstraints hgrow="SOMETIMES" />
 		<ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
@@ -20,12 +20,8 @@
 		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 	</padding>
 	<children>
-		<ScrollPane hbarPolicy="NEVER" GridPane.columnIndex="1" GridPane.rowSpan="2147483647" />
-		<ScrollPane hbarPolicy="NEVER" vbarPolicy="ALWAYS" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
-			<content>
-				<VBox />
-			</content>
-		</ScrollPane>
 		<TextArea fx:id="input" promptText="Chat" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+		<ListView fx:id="chat" />
+		<ListView fx:id="users" GridPane.columnIndex="1" GridPane.rowSpan="2147483647" />
 	</children>
 </GridPane>
