--- a/ChatProjectClient/src/fxml/index.fxml
+++ b/ChatProjectClient/src/fxml/index.fxml
@@ -5,7 +5,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="5.0"
+<GridPane hgap="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" vgap="5.0"
 	xmlns="http://javafx.com/javafx/8"
 	xmlns:fx="http://javafx.com/fxml/1" fx:controller="IndexController">
 	<columnConstraints>
@@ -13,6 +13,7 @@
 		<ColumnConstraints hgrow="SOMETIMES" percentWidth="30.0" />
 	</columnConstraints>
 	<rowConstraints>
+		<RowConstraints vgrow="NEVER" />
 		<RowConstraints vgrow="SOMETIMES" />
 		<RowConstraints percentHeight="20.0" vgrow="SOMETIMES" />
 	</rowConstraints>
@@ -20,8 +21,9 @@
 		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
 	</padding>
 	<children>
-		<TextArea fx:id="input" promptText="Chat" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
-		<ListView fx:id="chat" />
-		<ListView fx:id="users" GridPane.columnIndex="1" GridPane.rowSpan="2147483647" />
+		<Label fx:id="name" GridPane.rowIndex="0" GridPane.columnIndex="0" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" />
+		<ListView fx:id="chat" GridPane.rowIndex="1" />
+		<TextArea fx:id="input" promptText="Chat" wrapText="true" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+		<ListView fx:id="users" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.rowSpan="2147483647" />
 	</children>
 </GridPane>
