--- a/ChatProjectClient/src/fxml/responseListCell.fxml
+++ b/ChatProjectClient/src/fxml/responseListCell.fxml
@@ -6,14 +6,19 @@
 <?import javafx.scene.layout.*?>
 
 
-<VBox xmlns="http://javafx.com/javafx/8"
-	xmlns:fx="http://javafx.com/fxml/1">
+<GridPane xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1" fx:id="container">
+	<columnConstraints>
+		<ColumnConstraints hgrow="ALWAYS" />
+	</columnConstraints>
 	<children>
-		<Label fx:id="message" />
-		<Label fx:id="user" alignment="CENTER_RIGHT" contentDisplay="RIGHT" textAlignment="RIGHT">
+		<Label fx:id="message" GridPane.rowIndex="0" textAlignment="LEFT">
+			<Font size="14.0" />
+		</Label>
+		<Label fx:id="user" GridPane.rowIndex="1" textAlignment="LEFT">
 			<font>
-				<Font size="8.0" />
+				<Font size="10.0" />
 			</font>
 		</Label>
 	</children>
-</VBox>
+</GridPane>
